--- a/styles/global.scss
+++ b/styles/global.scss
@@ -34,6 +34,7 @@
   }
   .bottom-decoration::after {
     @apply bg-yellow-400 absolute left-0 -bottom-1 w-full h-0.5 transition-all ease-in-out duration-100;
+    content: '';
   }
 }
 
