--- a/styles/global.scss
+++ b/styles/global.scss
@@ -69,7 +69,7 @@
   }
 
   .section--dark {
-    @apply bg-black bg-opacity-90 py-16 text-white text-center xl:text-left;
+    @apply bg-black bg-opacity-90 text-white text-center xl:text-left;
   }
 }
 
